fix back icon on small screen

--- a/app/styles/templates/_item.scss
+++ b/app/styles/templates/_item.scss
@@ -116,10 +116,6 @@
   }
 }
 
-.item-remove-icon {
-  margin-left: -1.3rem;
-}
-
 .item-page{
 
   @media #{$small-only} {
